* Upgrades to Spring 3.2.1